Adding new name filter Adding name filter tests